--- a/SampleMvcApplication/SampleMvcApplication/Views/EmployeeDetails/Index.cshtml
+++ b/SampleMvcApplication/SampleMvcApplication/Views/EmployeeDetails/Index.cshtml
@@ -62,6 +62,9 @@ window.onload=function(){
         background-color: #c3dde0;
     }
 </style>
+
+
+<span>Current date  is  @ViewData["CurrDate"]</span>
 <table align="center" class="altrowstable" id="alternatecolor">
     <tr>
         <th>
