--- a/SampleMvcApplication/SampleMvcApplication/Views/EmployeeDetails/Index.cshtml
+++ b/SampleMvcApplication/SampleMvcApplication/Views/EmployeeDetails/Index.cshtml
@@ -64,7 +64,7 @@ window.onload=function(){
 </style>
 
 
-<span>Current date  is  @ViewData["CurrDate"]</span>
+<span>Current date  is </span>
 <table align="center" class="altrowstable" id="alternatecolor">
     <tr>
         <th>
