--- a/SampleMvcApplication/SampleMvcApplication/Views/EmployeeDetails/Index.cshtml
+++ b/SampleMvcApplication/SampleMvcApplication/Views/EmployeeDetails/Index.cshtml
@@ -6,6 +6,7 @@
 
 <h2 style="color: #304c4f; font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 36px; margin: 0 0 24px; text-align: center;">HTA VSO POC </h2>
 <br /><br />
+
 <h1>@ViewData["val1"]</h1>
 <h4 style="color: #304c4f; font-family: 'Raleway',sans-serif;  line-height: 36px; margin: 0 0 24px; text-align: center;">Employee Details - DevTeamA</h4>
 <script type="text/javascript">
@@ -64,7 +65,7 @@ window.onload=function(){
 </style>
 
 
-<span>Current date  is </span>
+<span>Current date  is  @ViewData["CurrDate"] </span>
 <table align="center" class="altrowstable" id="alternatecolor">
     <tr>
         <th>
